Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    app: demo
    product: not-product
