ramin-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qua
