1.pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
  namespace: demo
spec:
  containers: 
    - name: web
      image: nginx:1.18
      ports:
       - name: web
         containerPort: 80
         protocol: TCP
