Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 namespace: demo
 name: nginx-deployment
 labels:
   app: nginx

spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
       app: nginx
    spec:
     containers:
     - name: nginx
       image: nginx:1.18
       ports:
        - containerPort: 80
