mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mysql
 labels:
  app: mysql
spec:
 selector:
   matchLabels:
    app: mysql
 template:
  metadata:
   labels:
     app: mysql
  spec:
   containers:
     - name: mysql
       image: localhost:5000/mysql:latest
   imagePullSecrets:
     - name: docker-repo-mani
