nginx-temp.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2022-03-27T16:46:15Z"
  labels:
    app.kubernetes.io/name: nginx
  name: nginx
  namespace: demo
  resourceVersion: "2357"
  uid: d9903459-95b9-49f9-846d-53b15c0eb41a
spec:
  containers:
  - image: nginx:1.18
    imagePullPolicy: IfNotPresent
    name: web
    ports:
    - containerPort: 80
      name: web
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-gzdq2
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube-m02
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-gzdq2
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2022-03-27T16:46:15Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2022-03-27T16:49:09Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2022-03-27T16:49:09Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2022-03-27T16:46:15Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://47feab83f43b405b3d32f5c3f79d45389c2579d61d25c07bb2883eb949d4d137
    image: nginx:1.18
    imageID: docker-pullable://nginx@sha256:e90ac5331fe095cea01b121a3627174b2e33e06e83720e9a934c7b8ccc9c55a0
    lastState: {}
    name: web
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-03-27T16:49:07Z"
  hostIP: 192.168.49.3
  phase: Running
  podIP: 10.244.4.2
  podIPs:
  - ip: 10.244.4.2
  qosClass: BestEffort
  startTime: "2022-03-27T16:46:15Z"
