pod-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
  labels:
    app.kubernetes.io/name: alpine
spec:
  containers: 
    - name: demo
      image: alpine
      command: ["sleep","3600"]
      volumeMounts:
        - name: config
          mountPath: "/config"
#          readOnly: true
  volumes:
   - name: config
     configMap:
       name : game-demo
       items:
        - key: "game.properties"
          path: "game.properties"
        - key: "user-interface.properties"
          path: "user-interface.properties"
