sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: nginx
 labels:
   app: nginx
 annotations:
  kubernetes.io/change-cause: 'Changing nginx image to 1.18'

spec:
  replicas: 7
  updateStrategy:
    rollingUpdate:
       partition: 2
#    type: OnDelete
#    type: RollingUpdate
#  podManagementPolicy: Parallel 
  podManagementPolicy: OrderedReady 
  serviceName: "nginx"
  revisionHistoryLimit: 20
  selector:
    matchLabels:
      app: nginx
#Pod template start:
  template:
    metadata:
      labels:
       app: nginx
    spec:
     containers:
     - name: nginx
       image: nginx:1.18
       ports:
        - containerPort: 80
#Pod template end	
#Checkout Startup of the start the app inner container.
       startupProbe:
         exec:
#           command:
#           - cat
#           - /etc/nginx/nginx.conf
         httpGet:
           port: 80
           path: /
#           path: /nginx   # Startup probe failed: HTTP probe failed with statuscode: 404- Unhealthy
#           httpHeaders:
#             - name:
#               value:
#         tcpSocket:
#            port: 80
         initialDelaySeconds: 10
         periodSeconds: 5
         failureThreshold: 2
         successThreshold: 1
#Checkout pod in the good state - container stat -describe-events
       livenessProbe:
         httpGet:
           port: 80
           path: /
#         tcpSocket:
#            port: 80
         initialDelaySeconds: 5
         periodSeconds: 5
         failureThreshold: 2
         successThreshold: 1  #Default
#Checkout the app inner container-response to requests -app has a problem - log of container
       readinessProbe:
         httpGet:
           port: 80
           path: /
#         tcpSocket:
#            port: 80
         initialDelaySeconds: 5
         periodSeconds: 5
         failureThreshold: 2
         successThreshold: 2
       resources:
         requests:          #Startup Reserve 
           memory: "16Mi"
           cpu: "10m"     # 1000m = 1 CPU
         limits:
           memory: "18Mi"  #using limits ,max of req, kube control manager manage it, limit for container.
           cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
 name: nginx
 labels:
   app: nginx
spec:
  clusterIP: None
  selector:
    app: nginx
  ports:
   - port: 80
